--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
             </div> 
             <div class="check-box">
                 <div>
-                    <input type="checkbox">
-                    <label> doTERRA Event </label>
+                    <input type="checkbox" id="checkbox1">
+                    <label for="checkbox1"> doTERRA Event </label>
                 </div>
                 <div>
-                    <input type="checkbox" class="checkbox2">
-                    <label> Opt-in Event </label>
+                    <input type="checkbox" id="checkbox2">
+                    <label for="checkbox2"> Opt-in Event </label>
                 </div>
             </div>
         </div>
