--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <div class="table">
         <div class="tuesday-1">
           <div class="t-head">
-            <span>9/12</span>
-            <span>tuesday</span>
+            <span>9/11 &nbsp;</span>
+            <span>monday</span>
           </div>
           <div class="t-body">
             <a href="#">rank retreats</a>
@@ -22,7 +22,7 @@
 
         <div class="tuesday-2">
           <div class="t-head">
-            <span>9/12</span>
+            <span>9/12 &nbsp;</span>
             <span>tuesday</span>
           </div>
           <div>
@@ -38,7 +38,7 @@
 
         <div class="wednesday">
           <div class="t-head">
-            <span>9/13</span>
+            <span>9/13 &nbsp;</span>
             <span>wednesday</span>
           </div>
           <div class="div2">
@@ -80,7 +80,7 @@
 
         <div class="thursday">
           <div class="t-head">
-            <span>9/14</span>
+            <span>9/14 &nbsp;</span>
             <span>thursday</span>
           </div>
           <div class="div1">
@@ -113,7 +113,7 @@
 
         <div class="friday">
           <div class="t-head">
-            <span>9/15</span>
+            <span>9/15 &nbsp;</span>
             <span>friday</span>
           </div>
           <div class="div1">
@@ -149,13 +149,13 @@
 
           <div class="div4">
             <a href="#">team parties</a>
-            <span class="small">(contact your upline)</span>
+            <span class="italic">(contact your upline)</span>
           </div>
         </div>
 
         <div class="saturday">
           <div class="t-head">
-            <span>9/16</span>
+            <span>9/16 &nbsp;</span>
             <span>saturday</span>
           </div>
           <div class="div1">
@@ -182,7 +182,7 @@
 
         <div class="sunday">
             <div class="t-head">
-                <span>9/17</span>
+                <span>9/17 &nbsp;</span>
                 <span>sunday</span>
             </div>
             <div class="div1">
