--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
                 <a href="#">music & the spoken word</a>
                 <span class="small">9am-11:30am</span>
             </div> 
-            <div class="check-box">
-                <div>
-                    <input type="checkbox" id="checkbox1">
-                    <label for="checkbox1"> doTERRA Event </label>
+            <div class="last-div">
+                <div class="div-1">
+                    <div class="square"></div>
+                    <p> doTERRA Event </p>
                 </div>
-                <div>
-                    <input type="checkbox" id="checkbox2">
-                    <label for="checkbox2"> Opt-in Event </label>
+                <div class="div-1">
+                  <div class="square-2 square"></div>
+                    <p> Opt-in Event </p>
                 </div>
             </div>
         </div>
