--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span>monday</span>
           </div>
           <div class="t-body">
-            <a href="#">rank retreats</a>
+            <a href="https://www.tickettailor.com/events/sharesuccess1/872836">rank retreats</a>
             <span class="small">10am-6pm</span>
           </div>
         </div>
@@ -26,11 +26,11 @@
             <span>tuesday</span>
           </div>
           <div>
-            <a href="#">rank retreats</a>
+            <a href="https://www.tickettailor.com/events/sharesuccess1/872836">rank retreats</a>
             <span class="small">10am-6pm</span>
           </div>
           <div>
-            <a href="#">diamond reception</a>
+            <a href="https://www.tickettailor.com/events/sharesuccess1/868078">diamond reception</a>
             <span class="italic">@ goddards</span>
             <span class="small">7-9pm</span>
           </div>
@@ -69,11 +69,11 @@
             </div>
           </div>
           <div class="div4">
-            <a href="#">breakthrough to live free training</a>
+            <a href="https://www.tickettailor.com/events/sharesuccess/884108">breakthrough to live free training</a>
             <span class="small">1-6pm</span>
           </div>
           <div class="div4">
-            <a href="#">symphony of the cells</a>
+            <a href="https://www.tickettailor.com/events/symphonyofthecells/766176">symphony of the cells</a>
             <span class="small">2-9:30pm</span>
           </div>
         </div>
@@ -148,7 +148,7 @@
           </div>
 
           <div class="div4">
-            <a href="#">team parties</a>
+            <a href="https://www.tickettailor.com/events/sharesuccess1/868047">team parties</a>
             <span class="italic">(contact your upline)</span>
           </div>
         </div>
@@ -174,7 +174,7 @@
             </div>
           </div>
           <div class="div3">
-            <a href="#">open house</a>
+            <a href="https://www.tickettailor.com/events/sharesuccess1/868029">open house</a>
             <span class="italic">@ Goddards</span>
             <span class="small">2-8pm</span>
           </div>
@@ -186,7 +186,7 @@
                 <span>sunday</span>
             </div>
             <div class="div1">
-                <a href="#">music & the spoken word</a>
+                <a href="https://www.tickettailor.com/events/sharesuccess1/868066">music & the spoken word</a>
                 <span class="small">9am-11:30am</span>
             </div> 
             <div class="last-div">
